--- a/Dockerfile_backend
+++ b/Dockerfile_backend
@@ -2,10 +2,10 @@
 FROM node:20-alpine
 
 # Set working directory
-WORKDIR /app
+WORKDIR /backend/app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY /backend/package*.json ./
 
 # Install dependencies
 RUN npm install
