--- a/Dockerfile_frontend
+++ b/Dockerfile_frontend
@@ -2,10 +2,10 @@
 FROM node:20-alpine
 
 # Set working directory
-WORKDIR /app
+WORKDIR /frontend/app
 
 # Copy package.json and package-lock.json
-COPY package*.json ./
+COPY /frontend/package*.json ./
 
 # Install dependencies
 RUN npm install
