--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,9 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.ts",
     "dev": "nodemon server.ts"
   },
@@ -13,8 +12,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/mocha": "^10.0.6",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "jest-html-reporter": "^3.10.2",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
