--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,3 +1,30 @@
+//{
+//  "compilerOptions": {
+//    "target": "ES2020",
+//    "useDefineForClassFields": true,
+//    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+//    "module": "ESNext",
+//    "skipLibCheck": true,
+//
+//    /* Bundler mode */
+//    "moduleResolution": "bundler",
+//    "allowImportingTsExtensions": true,
+//    "resolveJsonModule": true,
+//    "isolatedModules": true,
+//    "noEmit": true,
+//    "jsx": "react-jsx",
+//
+//    /* Linting */
+//    "strict": true,
+//    "noUnusedLocals": true,
+//    "noUnusedParameters": true,
+//    "noFallthroughCasesInSwitch": true
+//  },
+//  "include": ["src"],
+//  "references": [{ "path": "./tsconfig.node.json" }]
+//}
+
+
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -7,7 +34,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -20,6 +47,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "__tests__"], // Include test files for compilation
   "references": [{ "path": "./tsconfig.node.json" }]
 }
