--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,30 +1,3 @@
-//{
-//  "compilerOptions": {
-//    "target": "ES2020",
-//    "useDefineForClassFields": true,
-//    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-//    "module": "ESNext",
-//    "skipLibCheck": true,
-//
-//    /* Bundler mode */
-//    "moduleResolution": "bundler",
-//    "allowImportingTsExtensions": true,
-//    "resolveJsonModule": true,
-//    "isolatedModules": true,
-//    "noEmit": true,
-//    "jsx": "react-jsx",
-//
-//    /* Linting */
-//    "strict": true,
-//    "noUnusedLocals": true,
-//    "noUnusedParameters": true,
-//    "noFallthroughCasesInSwitch": true
-//  },
-//  "include": ["src"],
-//  "references": [{ "path": "./tsconfig.node.json" }]
-//}
-
-
 {
   "compilerOptions": {
     "target": "ES2020",
@@ -34,7 +7,7 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -45,8 +18,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src", "__tests__"], // Include test files for compilation
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
