--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "@types/mocha": "^10.0.6",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "jest-html-reporter": "^3.10.2",
+    "jest-html-reporters": "^3.1.7",
+    "jest-junit": "^16.0.0",
+    "jest-junit-reporter": "^1.1.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
     "supertest": "^6.3.4",
