--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.6.2",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
